--- a/resume/main.html
+++ b/resume/main.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Абдулхамидов Мурид - Фронтенд-разработчик</title>
+    <title>Абдулхамидов Мурид</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Open+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
@@ -12,9 +12,7 @@
     <header class="header">
         <div class="container">
             <div class="header-content">
-                <div class="avatar">
-                    <img src="avatar.jpg" alt="Абдулхамидов Мурид">
-                </div>
+                
                 <div class="header-info">
                     <h1>Абдулхамидов Мурид Ахмедович</h1>
                     <p class="subtitle">Фронтенд-разработчик</p>
@@ -34,7 +32,7 @@
                 <h2><i class="fas fa-user-graduate"></i> Образование</h2>
                 <div class="education-item">
                     <h3>Дагестанский государственный технический университет (ДГТУ)</h3>
-                    <p class="date">2021 - 2025 (3 курс)</p>
+                    <p class="date">2022 - 2025 (3 курс)</p>
                     <p>Факультет информационной безопасности</p>
                 </div>
             </section>
